refactor: List 응답을 TimeAllResponse 객체로 감싸서 반환하도록 변경